--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Honeypot</title>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
@@ -13,49 +13,49 @@
     <div class="profiles">
       <div class="card">
         <a class="profile-link" href="/Jack"
-          ><img src="/static/jack.jpg" />
+          ><img src="jack.jpg" />
           <div class="name">Jack</div>
           <div class="meta">6 - Playful young boy</div></a
         >
       </div>
       <div class="card">
         <a class="profile-link" href="/Emi"
-          ><img src="/static/emi.jpg" />
+          ><img src="emi.jpg" />
           <div class="name">Emi</div>
           <div class="meta">5 - loves to draw</div></a
         >
       </div>
       <div class="card">
         <a class="profile-link" href="/Noah"
-          ><img src="/static/noah.jpg" />
+          ><img src="noah.jpg" />
           <div class="name">Noah</div>
           <div class="meta">7 - loves playing soccer</div></a
         >
       </div>
       <div class="card">
         <a class="profile-link" href="/Lexi"
-          ><img src="/static/lexi.jpg" />
+          ><img src="lexi.jpg" />
           <div class="name">Lexi</div>
           <div class="meta">4 - likes horses</div></a
         >
       </div>
       <div class="card">
         <a class="profile-link" href="/John"
-          ><img src="/static/john.jpg" />
+          ><img src="john.jpg" />
           <div class="name">John</div>
           <div class="meta">9 - likes to play video games</div></a
         >
       </div>
       <div class="card">
         <a class="profile-link" href="/Mark"
-          ><img src="/static/mark.jpg" />
+          ><img src="mark.jpg" />
           <div class="name">Mark</div>
           <div class="meta">10 - likes to play football</div></a
         >
       </div>
       <div class="card">
         <a class="profile-link" href="/Noelle"
-          ><img src="/static/noelle.jpg" />
+          ><img src="noelle.jpg" />
           <div class="name">Noelle</div>
           <div class="meta">7 - loves nature</div></a
         >
