Fix stylesheet link path

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <script>
       document.addEventListener("keydown", function (e) {
         if (e.shiftKey && (e.key === "L" || e.key === "l")) {
-          window.location.href = "/login";
+          window.location.href = "login.html";
         }
       });
     </script>
