Work on profiles

--- a/index.html
+++ b/index.html
@@ -12,49 +12,49 @@
     <p>Select a profile to view more information.</p>
     <div class="profiles">
       <div class="card">
-        <a class="profile-link" href="/Jack"
+        <a class="profile-link" href="Jack"
           ><img src="jack.jpg" />
           <div class="name">Jack</div>
           <div class="meta">6 - Playful young boy</div></a
         >
       </div>
       <div class="card">
-        <a class="profile-link" href="/Emi"
+        <a class="profile-link" href="Emi"
           ><img src="emi.jpg" />
           <div class="name">Emi</div>
           <div class="meta">5 - loves to draw</div></a
         >
       </div>
       <div class="card">
-        <a class="profile-link" href="/Noah"
+        <a class="profile-link" href="Noah"
           ><img src="noah.jpg" />
           <div class="name">Noah</div>
           <div class="meta">7 - loves playing soccer</div></a
         >
       </div>
       <div class="card">
-        <a class="profile-link" href="/Lexi"
+        <a class="profile-link" href="Lexi"
           ><img src="lexi.jpg" />
           <div class="name">Lexi</div>
           <div class="meta">4 - likes horses</div></a
         >
       </div>
       <div class="card">
-        <a class="profile-link" href="/John"
+        <a class="profile-link" href="John"
           ><img src="john.jpg" />
           <div class="name">John</div>
           <div class="meta">9 - likes to play video games</div></a
         >
       </div>
       <div class="card">
-        <a class="profile-link" href="/Mark"
+        <a class="profile-link" href="Mark"
           ><img src="mark.jpg" />
           <div class="name">Mark</div>
           <div class="meta">10 - likes to play football</div></a
         >
       </div>
       <div class="card">
-        <a class="profile-link" href="/Noelle"
+        <a class="profile-link" href="Noelle"
           ><img src="noelle.jpg" />
           <div class="name">Noelle</div>
           <div class="meta">7 - loves nature</div></a
