--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p>Select a profile to view more information.</p>
     <div class="profiles">
       <div class="card">
-        <a class="profile-link" href="Jack.html"
+        <a class="profile-link" href="jack.html"
           ><img src="jack.jpg" />
           <div class="name">Jack</div>
           <div class="meta">6 - Playful young boy</div></a
