--- a/jack.html
+++ b/jack.html
@@ -18,6 +18,6 @@
     <img src="censore.jpg" alt="censored">
     <img src="censore.jpg" alt="censored">
   </div>
-  <a href="/">Back to profiles</a>
+  <a href="index.html">Back to profiles</a>
 </body>
 </html>
