--- a/index.html
+++ b/index.html
@@ -19,42 +19,42 @@
         >
       </div>
       <div class="card">
-        <a class="profile-link" href="Emi"
+        <a class="profile-link" href="emi.html"
           ><img src="emi.jpg" />
           <div class="name">Emi</div>
           <div class="meta">5 - loves to draw</div></a
         >
       </div>
       <div class="card">
-        <a class="profile-link" href="Noah"
+        <a class="profile-link" href="noah.html"
           ><img src="noah.jpg" />
           <div class="name">Noah</div>
           <div class="meta">7 - loves playing soccer</div></a
         >
       </div>
       <div class="card">
-        <a class="profile-link" href="Lexi"
+        <a class="profile-link" href="lexi.html"
           ><img src="lexi.jpg" />
           <div class="name">Lexi</div>
           <div class="meta">4 - likes horses</div></a
         >
       </div>
       <div class="card">
-        <a class="profile-link" href="John"
+        <a class="profile-link" href="john.html"
           ><img src="john.jpg" />
           <div class="name">John</div>
           <div class="meta">9 - likes to play video games</div></a
         >
       </div>
       <div class="card">
-        <a class="profile-link" href="Mark"
+        <a class="profile-link" href="mark.html"
           ><img src="mark.jpg" />
           <div class="name">Mark</div>
           <div class="meta">10 - likes to play football</div></a
         >
       </div>
       <div class="card">
-        <a class="profile-link" href="Noelle"
+        <a class="profile-link" href="noelle.html"
           ><img src="noelle.jpg" />
           <div class="name">Noelle</div>
           <div class="meta">7 - loves nature</div></a
