--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
   <body>
     <div class="login-form">
       <h2>Login</h2>
-      <form method="post">
+      <form method="post" action="/login">
         <label for="username">Username:</label>
         <input name="username" type="text" />
         <label for="password">Password:</label>
